# adhd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WIRING_STATUS.md  context.md  learnings.md
src/: app.rs  cli.rs  config.rs  event.rs  keymap.rs  main.rs  theme.rs  tools.rs  tui.rs
src/agents/: intake.rs  mod.rs  reducer.rs  schemas.rs  unstuck.rs
src/components/: capture_view.rs  command_palette.rs  debug_view.rs  explore_view.rs  focus_view.rs  home_view.rs  mod.rs  patch_view.rs  settings_view.rs  status_bar.rs  tab_bar.rs  unstuck_view.rs  verification_view.rs
src/domain/: coding_thread.rs  mod.rs  patch.rs  session.rs  symbol_trail.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  router.rs  traits.rs
src/repo/: git.rs  mod.rs  relevance.rs  scanner.rs
src/services/: drift.rs  export.rs  mod.rs  patch.rs  repo_context.rs  scope_guard.rs  thread_manager.rs  verification.rs
src/storage/: db.rs
src/util/: errors.rs  logging.rs  mod.rs  panic_hook.rs  time.rs
